--- a/cpp04/ex00/Makefile
+++ b/cpp04/ex00/Makefile
@@ -5,24 +5,27 @@ FLAG	=	-Wall -Wextra -Werror -std=c++98
 SRC		=	./src/main.cpp \
 			./src/Animal.cpp \
 			./src/Cat.cpp \
+			./src/WrongCat.cpp \
 			./src/Dog.cpp \
 			./src/WrongAnimal.cpp \
-			./src/WrongCat.cpp \
-			
 
-CC		=	g++
+
+OBJ = $(SRC:.cpp=.o)
+
+CC		=	c++
 
 RM		=	rm -rf
 
 all: $(NAME)
 
-$(NAME):
-	@$(CC) $(SRC) $(FLAG) -o $(NAME)
+$(NAME): $(OBJ)
+	$(CC) $(OBJ) $(CFLAGS) -o $(NAME)
 
 clean:
-	@$(RM) $(NAME)
+	@$(RM) $(OBJ)
 
 fclean : clean
+	@$(RM) $(NAME)
 
 re: fclean all
 
